Added some css to feedback form

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/feedback.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
-    
+
     <script type="text/javascript">
         $(document).ready(function() {
 
@@ -314,18 +314,18 @@
                             <h4 class="f"><a id = "feedbackBtn" href = "#feedback">Feedback</a></h4>
                             <a name = "feedback">
                                                 <div class = "feedbackBox" id = "feedbackBox1">
-                                                            <center><i class="fa fa-comments" aria-hidden="true"></i><br/><br/>
-                                                            <pre>Name:      <input type = "text"/></pre><br/>
-                                                            <pre>Email:     <input type = "text"/></pre><br/>
-                                                            <button id = "feedBtn1" type = "button">Next>>></button></center>
+                                                            <center><i class="fa fa-comments fa-2x hover" aria-hidden="true"></i><br/><br/>
+                                                            <pre>Name:      <input class = "feed" type = "text"/></pre><br/>
+                                                            <pre>Email:     <input class = "feed" type = "text"/></pre><br/>
+                                                            <button class = "feddBtn" id = "feedBtn1" type = "button">Next>>></button></center>
                                                 </div>
                                                 <div class = "feedbackBox" id = "feedbackBox2">
-                                                            <center><i class="fa fa-comments" aria-hidden="true"></i><br/><br/>
-                                                            Feedback:  <br/><br/><textarea cols = "40" rows = "3">Please give your valuable feedback.</textarea><br/>
-                                                            <button id = "feedBtn2" type = "button">Finish</button></center>
+                                                            <center><i class="fa fa-comments fa-2x hover" aria-hidden="true"></i>&nbsp;&nbsp;Feedback
+                                                            <br/><br/><textarea class = "feed" cols = "40" rows = "3">Please give your valuable feedback.</textarea><br/>
+                                                            <button class = "feddBtn" id = "feedBtn2" type = "button">Finish</button></center>
                                                 </div>
                                                 <div class = "feedbackBox" id = "feedbackBox3">
-                                                            <center><i class="fa fa-check-square-o" aria-hidden="true"></i><br/><br/>
+                                                            <center><i class="fa fa-check-square-o fa-2x hover" aria-hidden="true"></i><br/><br/>
                                                             Thanks for giving your feedback!</center>
                                                 </div>
                             </a>
