Some requried adjestments

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/feedback.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
-    
+
     <script type="text/javascript">
         $(document).ready(function() {
 
@@ -71,7 +71,7 @@
             <h1> </h1>
 
             <div id="homeimg">
-                <img id="img1" src="res/9.jpg">
+                <img id="img1" src="res/images/other/ae.jpg">
 
             </div>
 
@@ -84,52 +84,58 @@
                 <a href="#">
                     <div class="i" id="1">
                         <figure>
-                            <img src="res/3.jpg" alt="">
+                            <img src="res/images/projects/1.jpg" alt="">
                             <figcaption id="a1">SHoutBox</figcaption>
                         </figure>
                     </div>
                 </a>
                 <div class="j">
-                    plot
+                    SHoutBox
                 </div>
-                <div class="j">hi this is my article.</div>
+                <div class="j" style="">SHoutBox is a chat service.<br> <a href="http://www.myshoutbox.tk">http://www.myshoutbox.tk</div>
             </div>
 
             <div class="art">
                 <a href="#">
                     <div class="i" id="2">
                         <figure>
-                            <img src="res/5.jpg" alt="">
+                            <img src="res/images/projects/2.jpg" alt="">
                             <figcaption id="a2">Jasper</figcaption>
                         </figure>
                     </div>
                 </a>
                 <div class="j">
-                    plot
+                    JasperBudd
                 </div>
-                <div class="j">hi this is my article.</div>
+                <div class="j">Intranet Website for Jasper Hostel.</div>
             </div>
             <div class="art">
                 <a href="#">
                     <div class="i" id="3">
-                        <img src="res/6.jpg" alt="">
-                        <figcaption id="a3">SHoutBox</figcaption>
+                      <figure>
+                          <img src="res/images/projects/3.jpg" alt="">
+                          <figcaption id="a3">SHoutBox</figcaption>
+                      </figure>
+
                     </div>
                 </a>
                 <div class="j">
-                    plot
+                    Title
                 </div>
                 <div class="j">hi this is my article.</div>
             </div>
             <div class="art">
                 <a href="#">
                     <div class="i" id="4">
-                        <img src="res/8.jpg" alt="">
+                      <figure>
+                        <img src="res/images/projects/4.jpg" alt="">
                         <figcaption id="a4">SHoutBox</figcaption>
+                      </figure>
+
                     </div>
                 </a>
                 <div class="j">
-                    plot
+                    Title
                 </div>
                 <div class="j">hi this is my article.</div>
             </div>
@@ -181,9 +187,9 @@
             </div>
             <div class="sertab1">
                 <div class="des">
-                    <img src="res/web.jpg" id="si1">
-                    <img src="res/b.jpg" id="si2">
-                    <img src="res/c.jpg" id="si3">
+                  <img src="res/images/test/web.jpg" id="si1">
+                  <img src="res/images/test/b.jpg" id="si2">
+                  <img src="res/images/test/c.jpg" id="si3">
 
                 </div>
             </div>
@@ -225,13 +231,13 @@
         </div>
         <div id="about">
 
-          <div class="story-img active" id="thumbab1" style="background-image: url('res/tarun_back.jpg'); display: block; opacity: 1;">
+          <div class="story-img active" id="thumbab1" style="background-image: url('res/images/about/bk_cover/t_back.jpg'); display: block; opacity: 1;">
           </div>
-          <div class="story-img" id="thumbab3" style="background-image: url('res/shivam_back.jpg'); display: block; opacity: 0;">
+          <div class="story-img" id="thumbab3" style="background-image: url('res/images/about/bk_cover/s_back.jpg'); display: block; opacity: 0;">
           </div>
-          <div class="story-img" id="thumbab2" style="background-image: url('res/t.jpg'); display: block; opacity: 0;">
+          <div class="story-img" id="thumbab2" style="background-image: url('res/images/about/bk_cover/vi_back.jpg'); display: block; opacity: 0;">
           </div>
-          <div class="story-img" id="thumbab4" style="background-image: url('res/7.jpg'); display: block; opacity: 0;">
+          <div class="story-img" id="thumbab4" style="background-image: url('res/images/about/bk_cover/ae_back.jpg'); display: block; opacity: 0;">
           </div>
           <div id="heading"></div>
           <div id="aboutbody" >
@@ -244,7 +250,7 @@
 
                     <div class="content"><h2>Tarun Kumar</h2></div>
                 		<div class="story" style="background-color:#f4ba49;">
-                      <div class="img"><img src="res/tarun.jpg" width="100px"></div>
+                      <div class="img"><img src="res/images/about/tarun.jpg" width="100px"></div>
                       <div class="story-con">
                       <div class="d2"><span class="name">Tarun Kumar</span><br>
                         <span class="contributor">Founder</span><br>
@@ -256,7 +262,7 @@
                 	<div class="r1"  id="ab2">
                     <div class="content"><h2>Vision</h2></div>
                     <div class="story" style="background-color:#f4ba49;">
-                      <div class="img"><img src="res/vi.jpeg" width="100px"></div>
+                      <div class="img"><img src="res/images/about/vi.jpeg" width="100px"></div>
                       <div class="story-con">
                       <div class="d2"><span class="name">Vision</span><br>
                         <span class="contributor">OurVision</span><br>
@@ -270,7 +276,7 @@
                 	<div class="r2" id="ab3">
                     <div class="content"><h2>Shivam Kumar</h2></div>
                 	<div class="story" style="background-color: #006cad;">
-                    <div class="img"><img src="res/shivam.jpg" width="100px"></div>
+                    <div class="img"><img src="res/images/about/shivam.jpg" width="100px"></div>
                     <div class="story-con">
                     <div class="d2"><span class="name">Shivam Kumar</span><br>
                       <span class="contributor">Founder</span><br>
@@ -282,7 +288,7 @@
                 	<div class="r2" id="ab4">
                     <div class="content"><h2>Accidental Engineer</h2></div>
                 		<div class="story" style="background-color:#f4ba49;">
-                      <div class="img"><img src="res/9.jpg" width="100px"></div>
+                      <div class="img"><img src="res/images/about/ae.jpg" width="100px"></div>
                       <div class="story-con">
                       <div class="d2"><span class="name" style="font-size:30px">Accidental Engineer</span><br>
                         <span class="contributor">Company</span><br>
