--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Accidental Engineer</title>
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" href="css/feedback.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
     <link rel="icon" href="res/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -295,62 +297,57 @@
 
             </div>
         </div>
-        <div id="footer">
-            <table id="footermain" style="width:100%">
-                <tr>
-                    <td class="tr">
-                        <div id="fm">
+        <div id = "footer">
+                    <div id = "footer-icon-bar">
+                          <table>
+                            <tr>
+                                      <td><center><a href="#home"><i class = "fa fa-archive"></i><br/><span class = "link-label-footer">Newsletter</span></a></center></td>
+                                      <td><center><a href="#project"><i class = "fa fa-user-secret"></i><br/><span class = "link-label-footer">Privacy Policy</span></center></a></td>
+                            </tr>
+                            <tr>
+                                      <td><center><a href="#service"><i class = "fa fa-cogs"></i><br/><span class = "link-label-footer">Terms Of Service</span></a></center></td>
+                                      <td><center><a href="#contactus"><i class = "fa fa-newspaper-o"></i><br/><span class = "link-label-footer">News &amp; Events</span></a></center></td>
+                            </tr>
+                            <tr>
+                                      <td><center><a href="#contactus"><i class = "fa fa-road"></i><br/><span class = "link-label-footer">Career</span></a></center></td>
+                                      <td><center><a href = "#feedback" id = "feedbackBtn" style = "clear:both;"><i class = "fa fa-commenting-o"></i><br/><span class = "link-label-footer">Feedback</span></a></center></td>
+                            </tr>
+                          </table>
+                    </div>
 
-                            <h4 class="f"><a href="#home">Home</a></h4>
-                            <h4 class="f"><a href="#project">Project</a></h4>
-                            <h4 class="f"><a href="#service">Services</a></h4>
-                            <h4 class="f"><a href="#contactus">Contact Us</a></h4>
-                            <h4 class="f"><a href="#about">About Us</a></h4>
-                        </div>
-                    </td>
-                    <td class="tr">
-                        <div id="fe">
-                            <h4 class="f"><a href="#contactus">Career</a></h4>
-                            <h4 class="f"><a id = "feedbackBtn" href = "#feedback">Feedback</a></h4>
-                            <a name = "feedback">
-                                                <div class = "feedbackBox" id = "feedbackBox1">
-                                                            <center><i class="fa fa-comments fa-2x hover" aria-hidden="true"></i><br/><br/>
-                                                            <pre>Name:      <input class = "feed" type = "text"/></pre><br/>
-                                                            <pre>Email:     <input class = "feed" type = "text"/></pre><br/>
-                                                            <button class = "feddBtn" id = "feedBtn1" type = "button">Next>>></button></center>
-                                                </div>
-                                                <div class = "feedbackBox" id = "feedbackBox2">
-                                                            <center><i class="fa fa-comments fa-2x hover" aria-hidden="true"></i>&nbsp;&nbsp;Feedback
-                                                            <br/><br/><textarea class = "feed" cols = "40" rows = "3">Please give your valuable feedback.</textarea><br/>
-                                                            <button class = "feddBtn" id = "feedBtn2" type = "button">Finish</button></center>
-                                                </div>
-                                                <div class = "feedbackBox" id = "feedbackBox3">
-                                                            <center><i class="fa fa-check-square-o fa-2x hover" aria-hidden="true"></i><br/><br/>
-                                                            Thanks for giving your feedback!</center>
-                                                </div>
-                            </a>
-                            <h4 class="f"><a href="#project">Help</a></h4>
-                            <h4 class="f"><a href="#service">Customer Support</a></h4>
-                        </div>
-                    </td>
+                    <div id="social-icon-bar">
+                        Follow Us:<br/>
+                                <a href="https://www.facebook.com/accidentalengineer/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                <a href="https://github.com/Accidental-Engineer"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                <a href="https://www.youtube.com/channel/UCsuCSia81mUAv7DzRbAEskA"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                                <a href="https://linkedin.com"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                    </div>
+                    <p>Designed and Created By Accidental Engineer</p>
 
-                    <td class="tr" style="text-align:center">
-                        <div class="social">
-                            Follow Us:
-                            <a href="https://www.facebook.com/accidentalengineer/"><i class="fa fa-facebook fa-2x hover" aria-hidden="true"></i></a>
-                            <a href="https://github.com/Accidental-Engineer"><i class="fa fa-github fa-2x hover" aria-hidden="true"></i></a>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="3">
-                        <div id="fc">Designed and Created By Accidental Engineer
-                        </div>
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </div>
+          </div>
+
+
+          <a name = "feedback">
+                              <div class = "feedbackBox" id = "feedbackBox1">
+                                          <center><i class="fa fa-comments fa-2x hover" aria-hidden="true"></i><br/><br/>
+                                          <pre>Name:      <input class = "feed" type = "text"/></pre><br/>
+                                          <pre>Email:     <input class = "feed" type = "text"/></pre><br/>
+                                          <button class = "feddBtn" id = "feedBtn1" type = "button">Next>>></button></center>
+                              </div>
+                              <div class = "feedbackBox" id = "feedbackBox2">
+                                          <center><i class="fa fa-comments fa-2x hover" aria-hidden="true"></i>&nbsp;&nbsp;Feedback
+                                          <br/><br/><textarea class = "feed" cols = "40" rows = "3">Please give your valuable feedback.</textarea><br/>
+                                          <button class = "feddBtn" id = "feedBtn2" type = "button">Finish</button></center>
+                              </div>
+                              <div class = "feedbackBox" id = "feedbackBox3">
+                                          <center><i class="fa fa-check-square-o fa-2x hover" aria-hidden="true"></i><br/><br/>
+                                          Thanks for giving your feedback!</center>
+                              </div>
+          </a>
+
+      </div>
+
+
 </body>
 
 </html>
