--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
-    <link rel="icon" href="res/icon.png" />
+    <link rel="icon" href="res/images/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript" src="js/jquery/jquery.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
@@ -251,7 +251,7 @@
                 	<div class="r1" id="ab1">
 
                     <div class="content"><h2>Tarun Kumar</h2></div>
-                		<div class="story" style="background-color:#f4ba49;">
+                		<div class="story" style="background-color:#f4ba49; color:rgb(40, 40, 40)">
                       <div class="img"><img src="res/images/about/tarun.jpg" width="100px"></div>
                       <div class="story-con">
                       <div class="d2"><span class="name">Tarun Kumar</span><br>
@@ -263,11 +263,11 @@
                 	</div>
                 	<div class="r1"  id="ab2">
                     <div class="content"><h2>Vision</h2></div>
-                    <div class="story" style="background-color:#f4ba49;">
+                    <div class="story" style="background-color:#006cad;color:rgb(223, 223, 223)">
                       <div class="img"><img src="res/images/about/vi.jpeg" width="100px"></div>
                       <div class="story-con">
                       <div class="d2"><span class="name">Vision</span><br>
-                        <span class="contributor">OurVision</span><br>
+                        <span class="contributor" style="color:rgb(158, 158, 158)" >OurVision</span><br>
                             Accidental Engineer is a programming hub open for all. Anyone intrested in programmnig can join this hub. Our organization, Accidental Engineer, works on various real-world projects based on programming, development and designing skills. Anybody interested to contribute can contact us on Facebook and GitHub.<br>
                         <span class="contact"></span></div>
                       </div>
@@ -277,19 +277,19 @@
 
                 	<div class="r2" id="ab3">
                     <div class="content"><h2>Shivam Kumar</h2></div>
-                	<div class="story" style="background-color: #006cad;">
+                	<div class="story" style="background-color:#4f1b24 ; color:rgb(223, 223, 223)">
                     <div class="img"><img src="res/images/about/shivam.jpg" width="100px"></div>
                     <div class="story-con">
                     <div class="d2"><span class="name">Shivam Kumar</span><br>
-                      <span class="contributor">Founder</span><br>
+                      <span class="contributor" style="color:rgb(158, 158, 158)">Founder</span><br>
                       Pursuing Integrated M. Tech in Mathematics & Computing from IIT(ISM) Dhanbad, has keen interest in Web Development. He has good hands at JavaScript, PHP and MySQL and programming expertise in C and C++.<br>
-                      <span class="contact">Contact: skshivam64@gmail.com</span></div>
+                      <span class="contact" style="color:rgb(158, 158, 158)">Contact: skshivam64@gmail.com</span></div>
                 	</div>
                 	</div>
                 	</div>
                 	<div class="r2" id="ab4">
                     <div class="content"><h2>Accidental Engineer</h2></div>
-                		<div class="story" style="background-color:#f4ba49;">
+                		<div class="story" style="background-color:#f44949; color:rgb(40, 40, 40)">
                       <div class="img"><img src="res/images/about/ae.jpg" width="100px"></div>
                       <div class="story-con">
                       <div class="d2"><span class="name" style="font-size:30px">Accidental Engineer</span><br>
@@ -322,13 +322,13 @@
                     </div>
 
                     <div id="social-icon-bar">
-                        Follow Us:<br/>
-                                <a href="https://www.facebook.com/accidentalengineer/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                <a href="https://github.com/Accidental-Engineer"><i class="fa fa-github" aria-hidden="true"></i></a>
-                                <a href="https://www.youtube.com/channel/UCsuCSia81mUAv7DzRbAEskA"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
-                                <a href="https://linkedin.com"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                      <br>
+                                <a href="https://www.facebook.com/accidentalengineer/"><i class="fa fa-facebook" aria-hidden="true" style="color:#3b5998"></i></a>
+                                <a href="https://github.com/Accidental-Engineer"><i class="fa fa-github" aria-hidden="true" style="color:#24292e"></i></a>
+                                <a href="https://www.youtube.com/channel/UCsuCSia81mUAv7DzRbAEskA"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#c51a1e"></i></a>
+                                <a href="https://linkedin.com/company/accidentalengineer"><i class="fa fa-linkedin-square" aria-hidden="true" style="color:#0077b5"></i></a>
                     </div>
-                    <p>Designed and Created By Accidental Engineer</p>
+                    <p >Designed and Created By Accidental Engineer</p>
 
           </div>
 
