--- a/index.html
+++ b/index.html
@@ -323,10 +323,10 @@
 
                     <div id="social-icon-bar">
                       <br>
-                                <a href="https://www.facebook.com/accidentalengineer/"><i class="fa fa-facebook" aria-hidden="true" style="color:#3b5998"></i></a>
-                                <a href="https://github.com/Accidental-Engineer"><i class="fa fa-github" aria-hidden="true" style="color:#24292e"></i></a>
-                                <a href="https://www.youtube.com/channel/UCsuCSia81mUAv7DzRbAEskA"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#c51a1e"></i></a>
-                                <a href="https://linkedin.com/company/accidentalengineer"><i class="fa fa-linkedin-square" aria-hidden="true" style="color:#0077b5"></i></a>
+                                <a href="https://www.facebook.com/accidentalengineer/" target="_blank"><i class="fa fa-facebook" aria-hidden="true" style="color:#3b5998"></i></a>
+                                <a href="https://github.com/Accidental-Engineer" target="_blank"><i class="fa fa-github" aria-hidden="true" style="color:#24292e"></i></a>
+                                <a href="https://www.youtube.com/channel/UCsuCSia81mUAv7DzRbAEskA" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true" style="color:#c51a1e"></i></a>
+                                <a href="https://linkedin.com/company/accidentalengineer" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true" style="color:#0077b5"></i></a>
                     </div>
                     <p >Designed and Created By Accidental Engineer</p>
 
